// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`development 1`] = `
Object {
  "devServer": Object {
    "compress": true,
    "contentBase": "<PROJECT_ROOT>",
    "disableHostCheck": true,
    "headers": Object {
      "Access-Control-Allow-Origin": "*",
    },
    "host": "0.0.0.0",
    "https": false,
    "port": 8080,
    "publicPath": "http://127.0.0.1:8080/dist/",
  },
  "devtool": "cheap-module-source-map",
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "loader": "babel-loader",
        "test": /\\\\\\.js\\$/,
      },
      Object {
        "test": /\\\\\\.css\\$/,
        "use": Array [
          "<PROJECT_ROOT>/node_modules/mini-css-extract-plugin/dist/loader.js",
          Object {
            "loader": "css-loader",
            "options": Object {
              "importLoaders": 1,
              "sourceMap": true,
              "url": false,
            },
          },
          Object {
            "loader": "postcss-loader",
            "options": Object {
              "sourceMap": true,
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.s\\(c\\|a\\)ss\\$/,
        "use": Array [
          "<PROJECT_ROOT>/node_modules/mini-css-extract-plugin/dist/loader.js",
          Object {
            "loader": "css-loader",
            "options": Object {
              "importLoaders": 2,
              "sourceMap": true,
              "url": [Function],
            },
          },
          Object {
            "loader": "postcss-loader",
            "options": Object {
              "sourceMap": true,
            },
          },
          Object {
            "loader": "sass-loader",
            "options": Object {
              "implementation": Object {
                "Exception": [Function],
                "FALSE": SassBoolean0 {
                  "value": false,
                },
                "Logger": Object {
                  "silent": Object {
                    "debug": [Function],
                    "warn": [Function],
                  },
                },
                "NULL": _SassNull0 {},
                "SassArgumentList": [Function],
                "SassBoolean": [Function],
                "SassColor": [Function],
                "SassFunction": [Function],
                "SassList": [Function],
                "SassMap": [Function],
                "SassNumber": [Function],
                "SassString": [Function],
                "TRUE": SassBoolean0 {
                  "value": true,
                },
                "Value": [Function],
                "cli_pkg_main_0_": [Function],
                "compile": [Function],
                "compileAsync": [Function],
                "compileString": [Function],
                "compileStringAsync": [Function],
                "info": "dart-sass	1.45.0	(Sass Compiler)	[Dart]
dart2js	2.15.0	(Dart Compiler)	[Dart]",
                "load": [Function],
                "render": [Function],
                "renderSync": [Function],
                "sassFalse": SassBoolean0 {
                  "value": false,
                },
                "sassNull": _SassNull0 {},
                "sassTrue": SassBoolean0 {
                  "value": true,
                },
                "types": Object {
                  "Boolean": [Function],
                  "Color": [Function],
                  "Error": [Function],
                  "List": [Function],
                  "Map": [Function],
                  "Null": [Function],
                  "Number": [Function],
                  "String": [Function],
                },
              },
              "sassOptions": Object {
                "fiber": false,
              },
            },
          },
        ],
      },
      Object {
        "loader": "url-loader",
        "options": Object {
          "limit": 8192,
          "outputPath": "assets",
        },
        "test": /\\\\\\.\\(svg\\|png\\|jpg\\|gif\\)\\$/i,
      },
    ],
  },
  "optimization": Object {
    "minimizer": Array [
      OptimizeCssAssetsWebpackPlugin {
        "deleteAssetsMap": Object {},
        "options": Object {
          "assetNameRegExp": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
          "assetProcessors": Array [
            Object {
              "phase": "compilation.optimize-chunk-assets",
              "processor": [Function],
              "regExp": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
            },
          ],
          "canPrint": undefined,
          "cssProcessor": Processor {
            "plugins": Array [
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-discard-comments",
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-minify-gradients",
              },
              Object {
                "postcssPlugin": "postcss-reduce-initial",
                "prepare": [Function],
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-svgo",
              },
              Object {
                "postcssPlugin": "postcss-normalize-display-values",
                "prepare": [Function],
              },
              Object {
                "postcssPlugin": "postcss-reduce-transforms",
                "prepare": [Function],
              },
              Object {
                "postcssPlugin": "postcss-colormin",
                "prepare": [Function],
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-normalize-timing-functions",
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-calc",
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-convert-values",
              },
              Object {
                "postcssPlugin": "postcss-ordered-values",
                "prepare": [Function],
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-minify-selectors",
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-minify-params",
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-normalize-charset",
              },
              Object {
                "postcssPlugin": "postcss-discard-overridden",
                "prepare": [Function],
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-normalize-string",
              },
              Object {
                "postcssPlugin": "postcss-normalize-unicode",
                "prepare": [Function],
              },
              Object {
                "postcssPlugin": "postcss-minify-font-values",
                "prepare": [Function],
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-normalize-url",
              },
              Object {
                "postcssPlugin": "postcss-normalize-repeat-style",
                "prepare": [Function],
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-normalize-positions",
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-normalize-whitespace",
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-merge-longhand",
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-discard-duplicates",
              },
              Object {
                "postcssPlugin": "postcss-merge-rules",
                "prepare": [Function],
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-discard-empty",
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-unique-selectors",
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "css-declaration-sorter",
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "cssnano-util-raw-cache",
              },
            ],
            "version": "8.4.5",
          },
          "cssProcessorOptions": Object {
            "discardComments": Object {
              "removeAll": true,
            },
          },
          "cssProcessorPluginOptions": Object {},
        },
        "phaseAssetProcessors": Object {
          "compilation.optimize-assets": Array [],
          "compilation.optimize-chunk-assets": Array [
            Object {
              "phase": "compilation.optimize-chunk-assets",
              "processor": [Function],
              "regExp": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
            },
          ],
          "emit": Array [],
        },
        "pluginDescriptor": Object {
          "name": "OptimizeCssAssetsWebpackPlugin",
        },
      },
      TerserPlugin {
        "options": Object {
          "cache": false,
          "cacheKeys": [Function],
          "chunkFilter": [Function],
          "exclude": undefined,
          "extractComments": false,
          "include": undefined,
          "minify": undefined,
          "parallel": true,
          "sourceMap": false,
          "terserOptions": Object {
            "output": Object {
              "comments": false,
            },
          },
          "test": /\\\\\\.m\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
          "warningsFilter": [Function],
        },
      },
    ],
    "runtimeChunk": "single",
    "splitChunks": Object {
      "chunks": "all",
    },
  },
  "output": Object {
    "filename": "[name].js",
    "hashDigestLength": 8,
    "path": "<PROJECT_ROOT>/dist",
    "publicPath": "/dist/",
  },
  "plugins": Array [
    MiniCssExtractPlugin {
      "_sortedModulesCache": WeakMap {},
      "options": Object {
        "chunkFilename": "[name].css",
        "experimentalUseImportModule": false,
        "filename": "[name].css",
        "ignoreOrder": false,
      },
      "runtimeOptions": Object {
        "attributes": undefined,
        "insert": undefined,
        "linkType": "text/css",
      },
    },
    ChunksWebpackPlugin {
      "addAssets": [Function],
      "isDevServer": undefined,
      "isWebpack4": false,
      "manifest": Object {
        "assets": Object {},
        "chunks": Object {},
      },
      "options": Object {
        "filename": "manifest.json",
      },
    },
    CleanWebpackPlugin {
      "apply": [Function],
      "cleanAfterEveryBuildPatterns": Array [],
      "cleanOnceBeforeBuildPatterns": Array [
        "**/*",
      ],
      "cleanStaleWebpackAssets": true,
      "currentAssets": Array [],
      "dangerouslyAllowCleanPatternsOutsideProject": false,
      "dry": false,
      "handleDone": [Function],
      "handleInitial": [Function],
      "initialClean": false,
      "outputPath": "",
      "protectWebpackAssets": true,
      "removeFiles": [Function],
      "verbose": false,
    },
    WebpackFixStyleOnlyEntriesPlugin {
      "apply": [Function],
      "options": Object {
        "extensions": Array [
          "less",
          "scss",
          "css",
          "sass",
          "styl",
        ],
        "ignore": undefined,
        "silent": false,
      },
    },
  ],
  "resolve": Object {
    "extensions": Array [
      ".wasm",
      ".mjs",
      ".js",
      ".json",
      ".jsx",
    ],
    "plugins": Array [],
  },
  "stats": "errors-warnings",
}
`;

exports[`production 1`] = `
Object {
  "devServer": Object {
    "compress": true,
    "contentBase": "<PROJECT_ROOT>",
    "disableHostCheck": true,
    "headers": Object {
      "Access-Control-Allow-Origin": "*",
    },
    "host": "0.0.0.0",
    "https": false,
    "port": 8080,
    "publicPath": "http://127.0.0.1:8080/dist/",
  },
  "devtool": false,
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "loader": "babel-loader",
        "test": /\\\\\\.js\\$/,
      },
      Object {
        "test": /\\\\\\.css\\$/,
        "use": Array [
          "<PROJECT_ROOT>/node_modules/mini-css-extract-plugin/dist/loader.js",
          Object {
            "loader": "css-loader",
            "options": Object {
              "importLoaders": 1,
              "sourceMap": true,
              "url": false,
            },
          },
          Object {
            "loader": "postcss-loader",
            "options": Object {
              "sourceMap": true,
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.s\\(c\\|a\\)ss\\$/,
        "use": Array [
          "<PROJECT_ROOT>/node_modules/mini-css-extract-plugin/dist/loader.js",
          Object {
            "loader": "css-loader",
            "options": Object {
              "importLoaders": 2,
              "sourceMap": true,
              "url": [Function],
            },
          },
          Object {
            "loader": "postcss-loader",
            "options": Object {
              "sourceMap": true,
            },
          },
          Object {
            "loader": "sass-loader",
            "options": Object {
              "implementation": Object {
                "Exception": [Function],
                "FALSE": SassBoolean0 {
                  "value": false,
                },
                "Logger": Object {
                  "silent": Object {
                    "debug": [Function],
                    "warn": [Function],
                  },
                },
                "NULL": _SassNull0 {},
                "SassArgumentList": [Function],
                "SassBoolean": [Function],
                "SassColor": [Function],
                "SassFunction": [Function],
                "SassList": [Function],
                "SassMap": [Function],
                "SassNumber": [Function],
                "SassString": [Function],
                "TRUE": SassBoolean0 {
                  "value": true,
                },
                "Value": [Function],
                "cli_pkg_main_0_": [Function],
                "compile": [Function],
                "compileAsync": [Function],
                "compileString": [Function],
                "compileStringAsync": [Function],
                "info": "dart-sass	1.45.0	(Sass Compiler)	[Dart]
dart2js	2.15.0	(Dart Compiler)	[Dart]",
                "load": [Function],
                "render": [Function],
                "renderSync": [Function],
                "sassFalse": SassBoolean0 {
                  "value": false,
                },
                "sassNull": _SassNull0 {},
                "sassTrue": SassBoolean0 {
                  "value": true,
                },
                "types": Object {
                  "Boolean": [Function],
                  "Color": [Function],
                  "Error": [Function],
                  "List": [Function],
                  "Map": [Function],
                  "Null": [Function],
                  "Number": [Function],
                  "String": [Function],
                },
              },
              "sassOptions": Object {
                "fiber": false,
              },
            },
          },
        ],
      },
      Object {
        "loader": "url-loader",
        "options": Object {
          "limit": 8192,
          "outputPath": "assets",
        },
        "test": /\\\\\\.\\(svg\\|png\\|jpg\\|gif\\)\\$/i,
      },
    ],
  },
  "optimization": Object {
    "minimizer": Array [
      OptimizeCssAssetsWebpackPlugin {
        "deleteAssetsMap": Object {},
        "options": Object {
          "assetNameRegExp": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
          "assetProcessors": Array [
            Object {
              "phase": "compilation.optimize-chunk-assets",
              "processor": [Function],
              "regExp": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
            },
          ],
          "canPrint": undefined,
          "cssProcessor": Processor {
            "plugins": Array [
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-discard-comments",
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-minify-gradients",
              },
              Object {
                "postcssPlugin": "postcss-reduce-initial",
                "prepare": [Function],
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-svgo",
              },
              Object {
                "postcssPlugin": "postcss-normalize-display-values",
                "prepare": [Function],
              },
              Object {
                "postcssPlugin": "postcss-reduce-transforms",
                "prepare": [Function],
              },
              Object {
                "postcssPlugin": "postcss-colormin",
                "prepare": [Function],
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-normalize-timing-functions",
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-calc",
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-convert-values",
              },
              Object {
                "postcssPlugin": "postcss-ordered-values",
                "prepare": [Function],
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-minify-selectors",
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-minify-params",
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-normalize-charset",
              },
              Object {
                "postcssPlugin": "postcss-discard-overridden",
                "prepare": [Function],
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-normalize-string",
              },
              Object {
                "postcssPlugin": "postcss-normalize-unicode",
                "prepare": [Function],
              },
              Object {
                "postcssPlugin": "postcss-minify-font-values",
                "prepare": [Function],
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-normalize-url",
              },
              Object {
                "postcssPlugin": "postcss-normalize-repeat-style",
                "prepare": [Function],
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-normalize-positions",
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-normalize-whitespace",
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-merge-longhand",
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-discard-duplicates",
              },
              Object {
                "postcssPlugin": "postcss-merge-rules",
                "prepare": [Function],
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-discard-empty",
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "postcss-unique-selectors",
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "css-declaration-sorter",
              },
              Object {
                "OnceExit": [Function],
                "postcssPlugin": "cssnano-util-raw-cache",
              },
            ],
            "version": "8.4.5",
          },
          "cssProcessorOptions": Object {
            "discardComments": Object {
              "removeAll": true,
            },
          },
          "cssProcessorPluginOptions": Object {},
        },
        "phaseAssetProcessors": Object {
          "compilation.optimize-assets": Array [],
          "compilation.optimize-chunk-assets": Array [
            Object {
              "phase": "compilation.optimize-chunk-assets",
              "processor": [Function],
              "regExp": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
            },
          ],
          "emit": Array [],
        },
        "pluginDescriptor": Object {
          "name": "OptimizeCssAssetsWebpackPlugin",
        },
      },
      TerserPlugin {
        "options": Object {
          "cache": false,
          "cacheKeys": [Function],
          "chunkFilter": [Function],
          "exclude": undefined,
          "extractComments": false,
          "include": undefined,
          "minify": undefined,
          "parallel": true,
          "sourceMap": false,
          "terserOptions": Object {
            "output": Object {
              "comments": false,
            },
          },
          "test": /\\\\\\.m\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
          "warningsFilter": [Function],
        },
      },
    ],
    "runtimeChunk": "single",
    "splitChunks": Object {
      "chunks": "all",
    },
  },
  "output": Object {
    "filename": "[name].[contenthash].js",
    "hashDigestLength": 8,
    "path": "<PROJECT_ROOT>/dist",
    "publicPath": "/dist/",
  },
  "plugins": Array [
    MiniCssExtractPlugin {
      "_sortedModulesCache": WeakMap {},
      "options": Object {
        "chunkFilename": "[name].[contenthash].css",
        "experimentalUseImportModule": false,
        "filename": "[name].[contenthash].css",
        "ignoreOrder": false,
      },
      "runtimeOptions": Object {
        "attributes": undefined,
        "insert": undefined,
        "linkType": "text/css",
      },
    },
    ChunksWebpackPlugin {
      "addAssets": [Function],
      "isDevServer": undefined,
      "isWebpack4": false,
      "manifest": Object {
        "assets": Object {},
        "chunks": Object {},
      },
      "options": Object {
        "filename": "manifest.json",
      },
    },
    CleanWebpackPlugin {
      "apply": [Function],
      "cleanAfterEveryBuildPatterns": Array [],
      "cleanOnceBeforeBuildPatterns": Array [
        "**/*",
      ],
      "cleanStaleWebpackAssets": true,
      "currentAssets": Array [],
      "dangerouslyAllowCleanPatternsOutsideProject": false,
      "dry": false,
      "handleDone": [Function],
      "handleInitial": [Function],
      "initialClean": false,
      "outputPath": "",
      "protectWebpackAssets": true,
      "removeFiles": [Function],
      "verbose": false,
    },
    WebpackFixStyleOnlyEntriesPlugin {
      "apply": [Function],
      "options": Object {
        "extensions": Array [
          "less",
          "scss",
          "css",
          "sass",
          "styl",
        ],
        "ignore": undefined,
        "silent": false,
      },
    },
  ],
  "resolve": Object {
    "extensions": Array [
      ".wasm",
      ".mjs",
      ".js",
      ".json",
      ".jsx",
    ],
    "plugins": Array [],
  },
  "stats": "errors-warnings",
}
`;
